# lego

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
lego/: __init__.py  dataset.py  features.py  plots.py
lego/modeling/: predict.py  train.py
src/data/: synthetic_data.py
src/database/: config.py  create_dummy_db.py  schema.py
src/mockup/: fake_db_data_generation.py
src/models/: custom_dataset.py  image_recognition_train.py  inference.py  video_stream_run.py
src/wandb/: latest-run
src/wandb/run-20240625_015651-06nsduu0/: run-06nsduu0.wandb
src/wandb/run-20240625_015651-06nsduu0/files/: config.yaml  wandb-metadata.json
src/wandb/run-20240625_015836-852mxliy/: run-852mxliy.wandb
src/wandb/run-20240625_015836-852mxliy/files/: config.yaml  wandb-metadata.json
src/wandb/run-20240625_020556-o4nqj0zb/: run-o4nqj0zb.wandb
src/wandb/run-20240625_020556-o4nqj0zb/files/: config.yaml  wandb-metadata.json
src/wandb/run-20240625_021952-o4pavokm/: run-o4pavokm.wandb
src/wandb/run-20240625_021952-o4pavokm/files/: config.yaml  requirements.txt  wandb-metadata.json
src/wandb/run-20240625_022302-kt9hvnjt/: run-kt9hvnjt.wandb
src/wandb/run-20240625_022302-kt9hvnjt/files/: config.yaml  wandb-metadata.json
src/wandb/run-20240625_022533-5rsel9av/: run-5rsel9av.wandb
src/wandb/run-20240625_022533-5rsel9av/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/wandb/run-20240625_023112-tgbfq9i6/: run-tgbfq9i6.wandb
src/wandb/run-20240625_023112-tgbfq9i6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/wandb/run-20240625_023514-uoski3nd/: run-uoski3nd.wandb
src/wandb/run-20240625_023514-uoski3nd/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/wandb/run-20240625_024106-dnk2u9nm/: run-dnk2u9nm.wandb
src/wandb/run-20240625_024106-dnk2u9nm/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/wandb/run-20240625_024454-zy8vufaa/: run-zy8vufaa.wandb
src/wandb/run-20240625_024454-zy8vufaa/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/wandb/run-20240625_024632-xi9bnf71/: run-xi9bnf71.wandb
src/wandb/run-20240625_024632-xi9bnf71/files/: config.yaml  wandb-metadata.json  wandb-summary.json
unit_tests/: database.py
